# vimrc

./: .gitignore  .gitmodules  README  Rprofile  aliases  bashrc  com.googlecode.iterm2.plist  condarc  distributionrc  filetype.vim  gitconfig  gvimrc  i3config  i3status.conf  ideavimrc  jshintrc  muttrc  octaverc  p10k.zsh  screenrc  setup.sh  signature  spacemacs  tmux.conf  update_bundles.rb  vimrc  zshrc
after/syntax/: python.vim
autoload/: jedi.vim
backup/: .bash_aliases~  .vimrc~
bash_completion.d/: git  tmux
doc/: tags
fnl/: fnl-add-to-usb  fnl-backup-dry-run  fnl-backup-to-usb  fnl-restore-dry-run  fnl-restore-from-usb
ftplugin/: go.vim
ftplugin/go/: fmt.vim
ftplugin/python/: jedi.vim
plugin/: jedi.vim  jedi_vim.py  pydoc.vim
ruby/command-t/: ext.bundle
spell/: en.utf-8.add  en.utf-8.add.spl
syntax/: python3.0.vim  python3.vim
templates/: CMakeLists.txt  copyright_hash.txt  copyright_slash.txt  main.cpp  script.py  version.hpp.in
